--- a/News Board/News Board/Application/Info.plist
+++ b/News Board/News Board/Application/Info.plist
@@ -34,5 +34,10 @@
 		<string>Nunito-Regular.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
